[gd_scene load_steps=2 format=3 uid="uid://pet_creator"]

[ext_resource type="Script" path="res://scripts/screens/pet_creator.gd" id="1_script"]

[node name="PetCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.95, 0.9, 1)

[node name="Header" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.4, 0.3, 0.2, 1)
text = "Pet Creator"
horizontal_alignment = 1

[node name="PetPreview" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2

[node name="PetSprite" type="Sprite2D" parent="PetPreview"]
position = Vector2(150, 100)

[node name="ColorLabel" type="Label" parent="PetPreview"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.95
theme_override_font_sizes/font_size = 16
text = "Choose your pet's color"
horizontal_alignment = 1

[node name="OptionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.48
anchor_right = 0.95
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ColorGrid" type="GridContainer" parent="OptionsPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 8

[node name="NameContainer" type="HBoxContainer" parent="OptionsPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="OptionsPanel/VBox/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Name:"

[node name="NameInput" type="LineEdit" parent="OptionsPanel/VBox/NameContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Enter pet name..."
max_length = 20

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.78
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="BackButton" type="Button" parent="BottomPanel/HBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Back"

[node name="CreateButton" type="Button" parent="BottomPanel/HBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Create Pet!"

[connection signal="pressed" from="BottomPanel/HBox/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="BottomPanel/HBox/CreateButton" to="." method="_on_create_pressed"]


